--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TtpsFrontend</title>
+  <title>TTPS-Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Food & Events</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarText"
+      aria-controls="navbarText"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">
+            Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            Features
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            Pricing
+          </a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        Amamos los eventos y la comida
+      </span>
+    </div>
+  </nav>
   <app-root></app-root>
 </body>
 </html>
